# disco

./: pyproject.toml  run.ps1  run.sh
disco/: __main__.py  camera.py  collidable.py  moveable.py  platform.py  player.py  renderable.py  transformable.py
disco/level/: __init__.py  parse.py
levels/: 01.disco-level
