[tool.poetry]
name = "disco"
version = "0.1.0"
description = ""
authors = ["Kyle Coffey <kylecoffey1999@gmail.com>", "Robert Crager <robert.crager18@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
